Fixed Mobile Expanded Gag Cell Alignment
Long gag names previously caused misalignment with other gag cells in mobile expanded combo cell cards.

Added a max width to to fix this issue.

--- a/src/features/combos/combos.component.css
+++ b/src/features/combos/combos.component.css
@@ -203,6 +203,7 @@
     text-align: center;
     font-size: 16px;
   }
+  .combo-cell.expanded .gag-cell > div { width: 100px; }
 
   .gag-cell .gag-name { min-height: 0; }
 
